# hmm_test

./: .coverage  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  BTC.backtest.csv  BTC.csv  BTC.hmm_states.csv  CLAUDE.md  COMPARISON.md  COMPREHENSIVE_DOCUMENTATION.md  CONTEXT.md  Dockerfile  Dockerfile.dev  FIXES_SUMMARY.md  FUNCTION_ANALYSIS.md  GEMINI.md  GITHUB_PUSH_INSTRUCTIONS.md  LICENSE  LSTM.py  MAIN_DIRECTORY_INVENTORY.md  MAIN_PY_ANALYSIS.md  MIGRATION_STRATEGY.md  Makefile  Makefile.tasks  PHASE3_4_5_DETAILED_TASKS.md  PHASE_2_1_2_ENHANCEMENT_PLAN.md  PHASE_2_1_3_COMPLETION_REPORT.md  PHASE_2_1_3_CSV_PROCESSING_PLAN.md  PHASE_2_1_4_COMPLETION_REPORT.md  PHASE_2_1_4_UNIFIED_PIPELINE_PLAN.md  PLAN.md  PRACTICAL_EXAMPLES.md  PRD_HMM_BEST.md  PROJECT_STATUS.md  QUICK_START.md  QWEN.md  README.md  README_UPDATES_SUMMARY.md  SKILL.md  (+60 more)
.github/workflows/: ci.yml
.nexus-map/: INDEX.md
.nexus-map/arch/: dependencies.md  systems.md  test_coverage.md
.nexus-map/concepts/: concept_model.json  domains.md
.nexus-map/hotspots/: git_forensics.md
.nexus-map/raw/: ast_nodes.json  file_tree.txt  git_stats.json
.out-of-scope/: adaptive-threshold.md  ensemble-engine.md  gh-hmm-engine.md  hdp-hmm-engine.md  student-t-standalone-engine.md  wasserstein-hmm.md
.roo/: mcp.json
.taskmaster/: config.json  state.json
.taskmaster/docs/: hmm_futures_prd.txt  prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
building_docs/: CLI_IMPLEMENTATIONS_ANALYSIS.md  CONFIGURATION_CONSOLIDATION_PLAN.md  MIGRATION_PLAN_SUMMARY.md  MIGRATION_TASKS.md  PHASE1_DETAILED_TASKS.md  PHASE2_DETAILED_TASKS.md  PHASE_2_1_1_COMPLETION_REPORT.md  PHASE_2_1_1_IMPLEMENTATION.md  PHASE_2_1_2_COMPLETION_REPORT.md
docs/: HMM_Futures_Analysis_Comprehensive_Guide.md  api.rst  conf.py  hmm-regime-sota-review.md  index.rst  installation.rst
docs/adr/: 0001-three-independent-engines.md  0002-same-repo-dual-distribution.md  0003-engine-self-containment.md  0004-cli-data-loading-seam.md  0005-pca-in-model-layer.md  0006-bic-state-count-selection.md  0007-hysteresis-dwell-time-filters.md  0008-excise-dead-weight.md  0009-deepen-engine-seam.md  0010-trim-feature-engineering.md  0011-engine-dispatch-consolidation.md  0012-pipeline-run-decomposition.md  0013-fshmm-engine.md  0014-per-phase-timing-instrumentation.md  0015-regime-duration-forecasting.md  0016-robust-hmm-engine.md  0017-push-run-classify-into-engine-protocol.md  0018-degenerate-fit-detection-recovery.md  0019-engine-defaults-parameter-strategy.md  0020-hmm-engine-base-class-enrich-info-consolidation.md  0021-extract-presenter-layer-from-cli.md  0022-break-hmm-pipeline-walk-forward-coupling.md  0023-reverse-classify-on-engine-config.md  0024-unify-ticker-cache-period.md  README.md
docs/agents/: domain.md
docs/api/: data_processing.rst  utils.rst
docs/architecture/: 001-excise-dead-weight.md  002-deepen-engine-seam.md  003-trim-feature-engineering.md  004-extract-cli-loading-seam.md
docs/examples/: index.rst
docs/research/: benchmark-phases1-3.json  benchmark-phases1-3.md  feature-saliency-audit.md  technology-scan-2026-05.md
docs/reviews/: review-1-correctness.md
docs/user_guide/: complete_guide.rst  index.rst  overview.rst  quickstart.rst
hmm_futures_analysis/: __init__.py  cli.py  eval.py  presenter.py
hmm_futures_analysis/backtesting/: __init__.py  bias_prevention.py  performance_analyzer.py  performance_metrics.py  utils.py
hmm_futures_analysis/data_processing/: __init__.py  csv_auto_detect.py  csv_format_detector.py  csv_parser.py  data_validation.py  feature_engineering.py  messina_features.py  technical_indicators.py  ticker_cache.py
hmm_futures_analysis/hmm_models/: __init__.py  base.py  factory.py  gaussian_hmm.py  gmm_hmm.py
hmm_futures_analysis/model_training/: hmm_trainer.py  inference_engine.py  model_persistence.py
hmm_futures_analysis/regime/: __init__.py  _result_assembly.py  duration_forecast.py  engine_config_builder.py  engine_configs.py  engine_protocol.py  hmm_adapter.py  markov_chain.py  pipeline.py  regime_transitions.py  walk_forward.py
hmm_futures_analysis/utils/: __init__.py  data_types.py  logging_config.py
notebooks/: 01_basic_hmm_analysis.ipynb
output/: validation_report.txt
references/: backtesting_detail.md  configuration.md  feature_engineering.md  hmm_silent_failure.md  hmm_theory.md  troubleshooting.md
scripts/: __init__.py  benchmark_engines.py  cli.py  feature_saliency_audit.py  fshmm_sweep.py  fshmm_sweep_fast.py  fshmm_sweep_v2.py  fshmm_sweep_v3.py  messina_analysis.py  messina_sensitivity.py  messina_sweep.py  messina_sweep_phase2.py  robust_hmm_sweep.py  run.sh  run_phase2_parallel.sh  run_recommended.py  validate_regimes.py
scripts/backtesting/: bias_prevention.py  performance_analyzer.py  performance_metrics.py  strategy_engine.py  utils.py
scripts/data_processing/: csv_auto_detect.py  csv_format_detector.py  csv_parser.py  data_validation.py  feature_engineering.py  messina_features.py  technical_indicators.py
scripts/hmm_models/: base.py  gaussian_hmm.py
scripts/model_training/: hmm_trainer.py  inference_engine.py  model_persistence.py
scripts/regime/: __init__.py  hmm_adapter.py  pipeline.py  walk_forward.py
src/: __init__.py
src/hmm_models/: base.py  (+4 more)
test_data/: 0700_HK.csv  AAPL.csv  BAC.csv  BTC.csv  CRM.csv  GLD.csv  HDB_clean.csv  HYG.csv  IWM.csv  KO.csv  LQD.csv  MU.csv  NVDA.csv  SOXL.csv  SOXL_clean.csv  SPY.csv  XLE.csv  XLU.csv  sample_ohlcv.csv  test_futures.csv
test_output/: model_info.txt  state_statistics.txt  states.csv  validation_report.txt
tests/: conftest.py  test_duration_forecast.py  test_engine_independence.py  test_excise_dead_weight.py  test_feature_engineering.py  test_filters.py  test_fshmm.py  test_indicator_config.py  test_load_prices.py  test_messina_features.py  test_messina_integration.py  test_packaging.py  test_pca_whitening.py  test_profile_pipeline.py  test_regime_contract.py  test_regime_engine.py  test_regime_pipeline.py  test_robust_hmm.py  test_run_regime_timeout.py
(+244 files in other folders)
