[project]
name = "hmm-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "daft>=0.5.9",
    "dask[distributed]>=2025.10.0",
    "hmmlearn>=0.2.8",
    "jinja2==3.1.2",
    "joblib>=1.5.1",
    "loguru>=0.7.2",
    "matplotlib==3.8.2",
    "mplfinance==0.12.9b0",
    "numpy>=1.26.2",
    "pandas>=2.3.1",
    "plotly==5.18.0",
    "psutil>=7.1.0",
    "pydantic>=2.5.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.4",
    "seaborn>=0.13.2",
    "ta>=0.11.0",
    "tqdm>=4.67.1",
    "weasyprint==61.1",
]
