[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hmm-futures-analysis"
version = "0.2.0"
description = "Hidden Markov Models for futures market regime detection"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "hmmlearn>=0.2.7",
    "pydantic>=1.8.0",
    "pyyaml>=6.0",
    "ta>=0.10.0",
    "yfinance>=1.2.0",
]

[project.optional-dependencies]
yfinance = ["yfinance>=0.2.0"]
dask = ["dask[complete]>=2021.8.0"]
daft = ["daft>=0.3.0"]
survival = ["lifelines>=0.27.0"]
dev = ["pytest>=7.0", "ruff", "lifelines>=0.27.0"]

[project.scripts]
hmm-regime = "hmm_futures_analysis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["hmm_futures_analysis"]

[tool.hatch.build.targets.sdist]
include = ["/hmm_futures_analysis"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]

[tool.ruff]
target-version = "py39"
line-length = 88

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
